# structurizrx

./: .gitignore  CLAUDE.md  README.md  llms.txt
.github/workflows/: release.yml
Formula/: structurizrx.rb
docs/: SPEC.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: structurizr-dsl.tmLanguage.json
original-java/structurizr-application/src/main/java/com/structurizr/server/web/: HealthCheckController.java
rust/: Cargo.toml
rust/example/: workspace1.dsl
rust/examples/avisi/: NOTICE
rust/examples/q/: workspace.dsl
rust/structurizr-cli/: Cargo.toml
rust/structurizr-cli/src/: main.rs
rust/structurizr-dsl/: Cargo.toml
rust/structurizr-dsl/src/: error.rs  identifier_register.rs  lexer.rs  lib.rs  parser.rs  suggest.rs
rust/structurizr-dsl/tests/: integration.rs
rust/structurizr-lsp/: Cargo.toml
rust/structurizr-lsp/src/: backend.rs  convert.rs  diagnostics.rs  document.rs  index.rs  lib.rs
rust/structurizr-model/: Cargo.toml
rust/structurizr-model/src/: configuration.rs  documentation.rs  elements.rs  enums.rs  lib.rs  model.rs  styles.rs  validation.rs  views.rs  workspace.rs
rust/structurizr-model/tests/: json_roundtrip.rs
rust/structurizr-query/: Cargo.toml
rust/structurizr-query/src/: digest.rs  eval.rs  generate.rs  lexer.rs  lib.rs  lint.rs  parser.rs
rust/structurizr-query/tests/: generate.rs  integration.rs
rust/structurizr-renderer/: Cargo.toml
rust/structurizr-renderer/src/: diagram.rs  exporter.rs  indenting_writer.rs  lib.rs
rust/structurizr-renderer/src/dot/: mod.rs
rust/structurizr-renderer/src/mermaid/: mod.rs
rust/structurizr-renderer/src/plantuml/: mod.rs
rust/structurizr-renderer/src/png/: mod.rs
rust/structurizr-renderer/src/svg/: mod.rs
rust/structurizr-wasm/: Cargo.toml
rust/structurizr-wasm/src/: lib.rs
rust/structurizr-web/: Cargo.toml  build.rs
rust/structurizr-web/assets/js/: structurizr-diagram.js  structurizr-workspace.js
rust/structurizr-web/src/: assets.rs  lib.rs  markdown.rs  resolver.rs  server.rs  state.rs  watcher.rs
rust/structurizr-web/src/templates/: canvas.html  decision.html  decisions.html  diagram.html  index.html  workspace.html
