[package]
name = "structurizr-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
structurizr-model = { path = "../structurizr-model" }
structurizr-dsl = { path = "../structurizr-dsl" }
anyhow = "1"
dashmap = "6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tower-lsp-server = "0.23.0"

[dev-dependencies]
serde_json = "1"
