[package]
name = "structurizr-web"
version = "0.1.0"
edition = "2021"

[dependencies]
structurizr-model = { path = "../structurizr-model" }
structurizr-dsl = { path = "../structurizr-dsl" }
structurizr-renderer = { path = "../structurizr-renderer" }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
notify = "9.0.0-rc.3"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
open = "5"
pulldown-cmark = "0.13"
